--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prettier-atom",
+  "name": "prettier-atom-with-tabs",
   "main": "./lib/prettier.js",
   "version": "0.18.0",
   "description": "Format file contents using prettier",
@@ -8,14 +8,14 @@
     "formatter"
   ],
   "activationCommands": [],
-  "repository": "https://github.com/jlongster/prettier-atom",
+  "repository": "https://github.com/danielbuechele/prettier-atom-with-tabs",
   "license": "MIT",
   "engines": {
     "atom": ">=0.183.0 <2.0.0"
   },
   "dependencies": {
     "find-root": "^0.1.1",
-    "prettier": "^0.18.0"
+    "prettier-with-tabs": "^0.18.0"
   },
   "devDependencies": {
     "eslint": "^3.6.0",
