--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "prettier-atom-with-tabs",
   "main": "./lib/prettier.js",
-  "version": "0.18.1",
+  "version": "0.18.2",
   "description": "Format file contents using prettier",
   "keywords": [
     "javascript",
@@ -83,14 +83,14 @@
       "title": "Single Quote",
       "description": "If true, will use single instead of double quotes",
       "type": "boolean",
-      "default": false,
+      "default": true,
       "order": 5
     },
     "trailingComma": {
       "title": "Trailing Comma",
       "description": "Controls the printing of trailing commas wherever possible",
       "type": "boolean",
-      "default": false,
+      "default": true,
       "order": 6
     },
     "bracketSpacing": {
@@ -117,6 +117,13 @@
         "flow"
       ],
       "order": 9
+    },
+    "useTabs": {
+      "title": "Use Tabs",
+      "description": "Use tabs for indentation",
+      "type": "boolean",
+      "default": true,
+      "order": 10
     },
     "formatOnSaveScopes": {
       "title": "Format-on-Save Scopes",
